#587: training panel uses FutureTrainingPrioPopup